# hdtv

./: environment.yml
src/hdtv/: app.py  cmdline.py
src/hdtv/database/: common.py
src/hdtv/plugins/: printing.py
src/hdtv/rootext/calibration/: CMakeLists.txt
src/hdtv/rootext/cmake/: install_setup.cmake
src/hdtv/rootext/display/: CMakeLists.txt
src/hdtv/rootext/fit/: CMakeLists.txt  EEFitter.cc  EEFitter.hh  TheuerkaufFitter.cc  TheuerkaufFitter.hh
src/hdtv/rootext/mfile-root/: CMakeLists.txt
src/hdtv/rootext/mfile-root/matop/: CMakeLists.txt
src/hdtv/rootext/mfile-root/mfile/: CMakeLists.txt
src/hdtv/rootext/mfile-root/mfile/include/: mfile.h
src/hdtv/rootext/mfile-root/mfile/src/: callindir.c  gf2_minfo.c  lc_getput.c
